# MOSZE2021

./: .gitignore  Cell.cpp  Cell.h  CommandParsing.cpp  CommandParsing.h  IOtest.sh  InputLogic.cpp  README.md  Source.cpp  doxconf  fileParsing.cpp  fileParsing.h  good_output.csv  input.csv  input.txt  myTable.cpp  myTable.h  testInput.txt
.github/workflows/: GoogleTest.yml  main.yml  pushdocs.yml
tests/: CMakeLists.txt  IOtest.sh  good_output.csv  input.txt  testfile.csv  testfile2.csv  testfile_output.csv  unit_tests.cpp  unittests.cpp
